fix: layout bugs in references/contact

--- a/src/app/main-content/references/references.component.scss
+++ b/src/app/main-content/references/references.component.scss
@@ -29,6 +29,7 @@
 }
 
 .reference-card {
+  // min-width: 290px;
   max-width: 400px;
   border: 4px solid #000;
   padding: 1rem;
@@ -64,5 +65,17 @@
 
   .text {
     font-size: 18px;
+  }
+}
+
+@media (max-width: 768px) {
+  .references {
+    padding: 0 2rem;
+  }
+}
+
+@media (max-width: 480px) {
+  .references {
+    padding: 0 1rem;
   }
 }
